# GW2Viewer

./: .gitignore  Archive.cpp  Archive.h  ArchiveManager.cpp  ArchiveManager.h  BankFileData.cpp  BankFileData.h  BankIndexData.cpp  BankIndexData.h  Common.h  Common.props  Config.cpp  Config.h  Content.cpp  Content.h  ContentConstants.h  ContentQuery.cpp  ContentQuery.h  Encryption.cpp  Encryption.h  GUID.h  GW2Viewer.sln  GW2Viewer.vcxproj  HexViewer.cpp  HexViewer.h  ImGuiConfig.h  ImGuiExtensions.cpp  ImGuiExtensions.h  JSON.h  Macros.h  Main.cpp  MapLayoutViewer.cpp  MapLayoutViewer.h  PackContent.cpp  PackContent.h  PackFile.h  PackFileLayout.cpp  PackFileLayout.h  PackFileLayoutTraversal.h  PackTextManifest.cpp  (+24 more)
Common/: Common.FourCC.ixx  Common.GUID.ixx  Common.Hash.ixx  Common.JSON.h  Common.JSON.ixx  Common.Token32.ixx  Common.ixx  FourCC.ixx  GUID.ixx  Hash.ixx  JSON.ixx  Time.ixx  Token.ixx  Token32.ixx  Token64.ixx
Content/: Content.Conversation.ixx  Content.Event.ixx  Content.ixx  Conversation.ixx  Event.ixx
Data/: Game.cpp  Game.ixx
Data/Archive/: Archive.ixx  Data.Archive.Manager.cpp  Data.Archive.Manager.ixx  Manager.cpp  Manager.ixx
Data/Content/: Content-ContentFilter.ixx  Content-ContentName.ixx  Content-ContentNamespace.cpp  Content-ContentNamespace.ixx  Content-ContentObject.cpp  Content-ContentObject.ixx  Content-ContentTypeInfo.cpp  Content-ContentTypeInfo.ixx  Content-Query.cpp  Content-Query.ixx  Content-Symbols.cpp  Content-Symbols.ixx  Content-TypeInfo.cpp  Content-TypeInfo.ixx  Content.ixx  Data.Content-ContentFilter.ixx  Data.Content-ContentName.ixx  Data.Content-ContentObject.cpp  Data.Content-Query.cpp  Data.Content-Query.ixx  Data.Content-Symbols.cpp  Data.Content-TypeInfo.cpp  Data.Content-TypeInfo.ixx  Manager.cpp  Manager.ixx  Mangling.ixx
Data/Encryption/: Asset.ixx  Encryption.ixx  Manager.ixx  RC4.ixx  Text.ixx
Data/Manifest/: Asset.ixx  Manager.cpp  Manager.ixx
Data/Pack/: Data.Pack.Manager.cpp  Data.Pack.Manager.ixx  Data.Pack.PackFile-PackFile.ixx  Data.Pack.PackFile.cpp  Data.Pack.PackFile.ixx  Data.Pack.ixx  Manager.cpp  Manager.ixx  Pack.ixx  PackFile-Layout.ixx  PackFile-PackFile.ixx  PackFile-Traversal.ixx  PackFile.cpp
Data/Text/: Format.ixx  Manager.cpp  Manager.ixx
Data/Texture/: Manager.cpp  Manager.ixx  Texture.cpp  Texture.ixx
Data/Voice/: Manager.cpp  Manager.ixx
System/: Graphics.ixx
Tasks/: ContentObjectDisplayFormat.ixx  StartupLoading.ixx
UI/: Manager.cpp  Manager.ixx  Notifications.ixx  UI.Manager.cpp
UI/Controls/: Controls-AsyncProgressBar.ixx  Controls-ContentButton.ixx  Controls-ContentNamespaceButton.ixx  Controls-CopyButton.ixx  Controls-FileButton.ixx  Controls-FilteredComboBox.ixx  Controls-HexViewer.ixx  Controls-MapLayout.ixx  Controls-Texture.ixx  Controls-VoiceButton.ixx  Controls.cpp  Controls.ixx  UI.Controls-CopyButton.ixx  UI.Controls-HexViewer.ixx  UI.Controls-Texture.ixx  UI.Controls-VoiceButton.ixx  UI.Controls.ixx
UI/ImGui/: ImGui-Core.ixx  ImGui-Extensions.ixx  ImGui-Platform.ixx  ImGui-Wrap.ixx  ImGui.cpp  (+5 more)
User/: ArchiveIndex.cpp  ArchiveIndex.ixx  Config.cpp  Config.ixx  User.Config.ixx  User.ixx
Utils/: Async.ProgressBarContext.ixx  Async.ixx  Base64.ixx  CRC.ixx  ConstString.ixx  Container.ixx  Encoding.ixx  Enum.ixx  Exception.cpp  Exception.ixx  Format.ixx  Math.ixx  ProgressBarContext.ixx  Scan.ixx  ScanPE.ixx  Sort.ixx  String.ixx  Utils.Async.h  Utils.ConstString.ixx  Utils.Container.ixx  Utils.Encoding.ixx  Utils.Enum.ixx  Utils.Exception.ixx  Utils.Math.ixx  Utils.Scan.h  Utils.Scan.ixx  Utils.String.ixx  Utils.ixx  Visitor.ixx
dep/: IconsFontAwesome6.h  imguiwrap.dear.h  imguiwrap.helpers.h  magic_enum.ixx  nlohmann.json.ixx
dep/gw2dattools/: .gitignore  CMakeLists.txt  README.md  libgw2dattoolsConfig.cmake.in
dep/gw2dattools/examples/: CMakeLists.txt
dep/gw2dattools/examples/prj/: simple-extractor.cbp  simple-extractor.vcxproj  test.cbp  test.vcxproj
dep/gw2dattools/examples/src/: simple-extractor.cpp  test.cpp
dep/gw2dattools/include/gw2dattools/c_api/: compression_inflateDatFileBuffer.h
dep/gw2dattools/include/gw2dattools/compression/: inflateDatFileBuffer.h  inflateTextureFileBuffer.h
dep/gw2dattools/include/gw2dattools/exception/: Exception.h
dep/gw2dattools/include/gw2dattools/interface/: ANDatInterface.h
dep/gw2dattools/misc/ida/: parseANStructs.idc
dep/gw2dattools/misc/templates/: ANStructs.txt
dep/gw2dattools/prj/: gw2dattools.cbp  gw2dattools.sln  gw2dattools.vcxproj  gw2dattools.workspace
dep/gw2dattools/src/gw2dattools/c_api/: compression_inflateDatFileBuffer.cpp
dep/gw2dattools/src/gw2dattools/compression/: HuffmanTree.h  HuffmanTree.i  huffmanTreeUtils.cpp  huffmanTreeUtils.h  inflateDatFileBuffer.cpp  inflateTextureFileBuffer.cpp
dep/gw2dattools/src/gw2dattools/exception/: Exception.cpp
dep/gw2dattools/src/gw2dattools/format/: ANDat.cpp  ANDat.h  Mapping.cpp  Mapping.h  Mft.cpp  Mft.h  Utils.h
dep/gw2dattools/src/gw2dattools/interface/: ANDatInterface.cpp
dep/gw2dattools/src/gw2dattools/utils/: BitArray.h  BitArray.i
(+77 files in other folders)
